# hakyll-contrib-csv

./: .gitignore  README.md  csv-tablebuilder.cabal  csv-tables.cabal  hakyll-contrib-csv.cabal  site.hs
csv/: sample.csv  table.csv
js/: makesorted.js
src/: Main.hs
src/Hakyll/Contrib/: Csv.hs
templates/: default.html  layout.html  table-template.html
test/: CsvSpec.hs
