name:                csv-tablebuilder
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/narrative/csv-tablebuilder#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2016 Erik Stevenson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable csv-tablebuilder
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base
                     , bytestring
                     , cassava
                     , hakyll
                     , lucid
                     , text
                     , vector

