name:                csv-tables
version:             0.1.0.0
synopsis:            Generate Html tables from CSV files
description:         Please see README.md
homepage:            https://github.com/narrative/csv-tables#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2016 Erik Stevenson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable csv-tables
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , bytestring
                     , cassava
                     , hakyll
                     , lucid
                     , text
                     , vector

