name:                hakyll-contrib-csv
version:             0.1.0.0
synopsis:            Generate Html tables from CSV files
description:         Please see README.md
homepage:            https://github.com/narrative/hakyll-contrib-csv#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2016 Erik Stevenson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     Hakyll.Contrib.Csv
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base
                     , blaze-html
                     , bytestring
                     , cassava
                     , hakyll
                     , vector

test-suite hakyll-contrib-csv-spec
  main-is:             Spec.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base
                     , blaze-html
                     , bytestring
                     , cassava
                     , hakyll-contrib-csv
                     , hspec
  other-modules:       CsvSpec